--- a/src/styles/alexandria/GridCell.scss
+++ b/src/styles/alexandria/GridCell.scss
@@ -4,6 +4,7 @@ $cell-padding: 10px;
 
 .grid-component-cell {
   flex-grow: 1;
+  flex-shrink: 0;
   padding: 8px 0 8px $cell-padding;
 
   &:last-child {
@@ -13,6 +14,7 @@ $cell-padding: 10px;
   &-stretch {
     @include ellipse;
     flex-basis: 100%;
+    flex-shrink: 1;
   }
 
   &-clickable {
